@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-26T08:17:25Z",
+  "timestamp" : "2023-09-26T16:17:24Z",
   "count_outdated" : 160901,
   "uniques_outdated" : 1706,
-  "count" : 164469,
+  "count" : 164561,
   "uniques" : 1738,
   "clones" : [
     {
       "timestamp": "2023-09-12T00:00:00Z",
-      "count": 31,
-      "count_minmax": [ 31, 50 ],
-      "count_decinc": [ 19, 50 ],
+      "count": 14,
+      "count_minmax": [ 14, 50 ],
+      "count_decinc": [ 36, 50 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 113,
-      "count_minmax": [ 113, 113 ],
-      "count_decinc": [ 0, 113 ],
+      "count": 205,
+      "count_minmax": [ 113, 205 ],
+      "count_decinc": [ 0, 205 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
