@@ -1,10 +1,10 @@
 {
-  "count": 3549,
+  "count": 3624,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-09-12T00:00:00Z",
-      "count": 31,
+      "count": 14,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 113,
+      "count": 205,
       "uniques": 3
     }
   ]
