@@ -1,3 +1,12 @@
+2023-09-26T16:17:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6315477267 # 1212
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
+* notice: last 14d: unq all: 3 3624
+* notice: prev accum: outdated-unq outdated-all / unq all: 1706 160901 / 1738 164469
+* notice: next accum: outdated-unq outdated-all / unq all: 1706 160901 / 1738 164561
+* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -17 / +3 +205 -0 -0 / 3 205
+* notice: removed / changed dates: [] / [2023-09-12 2023-09-26]
+
 2023-09-26T08:17:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6309950432 # 1211
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
